Fix deprecated Double constructor and improve NaN check in ModelMVCGeneric
- Replace deprecated new Double(1) with Double.valueOf(1.0)
- Replace unclear NaN check (dVal != dVal) with Double.isNaN(dVal)
- Add @SuppressWarnings("unchecked") for safe generic type cast
- Remove unused java.util.* import

This fixes compiler warnings:
- Deprecated constructor warning
- Unchecked cast warning
- Improves code readability and maintainability

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>